@@ -59,6 +59,10 @@ int RegisterKismetSources(Packetsourcetracker *sourcetracker) {
                                        pcapsource_wext_registrant,
                                        monitor_orinoco, unmonitor_orinoco, 
                                        chancontrol_orinoco, 1);
+    sourcetracker->RegisterPacketsource("orinoco_14", 1, "IEEE80211b", 6,
+                                        pcapsource_wextfcs_registrant,
+                                        monitor_orinoco, unmonitor_orinoco,
+                                        chancontrol_orinoco, 1);
     sourcetracker->RegisterPacketsource("acx100", 1, "IEEE80211b", 6,
                                        pcapsource_wext_registrant,
                                        monitor_acx100, unmonitor_acx100, 
